💆🌕 Checkpoint ./server.js:51974198/164 ./public/index.html:51974198/53

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <meta id="theme-colour" name="theme-color" content="#222222" />
     <meta property="og:title" content="Dimka's TextWall" />
     <meta property="og:type" content="website" />
+    <meta name="keywords" content="Dimka, TextWall">
     <meta
       property="og:description"
       content="Multiplayer text editor, but better."
