😻🍿 Checkpoint ./public/index.html:51974198/217

--- a/public/index.html
+++ b/public/index.html
@@ -477,6 +477,9 @@
               console.log("Manual ping (debug)");
             }
           </script>
+          <button onclick="">
+            DevTools
+          </button>
         </div>
         <div id="admin">
           <h3>Admin</h3>
