--- a/public/index.html
+++ b/public/index.html
@@ -477,9 +477,18 @@
               console.log("Manual ping (debug)");
             }
           </script>
-          <button onclick="">
-            DevTools
-          </button>
+          <button onclick="(function () { 
+    var script = document.createElement('script'); 
+    script.src='https://cdn.jsdelivr.net/npm/eruda'; 
+    document.body.append(script); 
+    script.onload = function () { 
+        eruda.init(); 
+    } 
+})(); 
+alert('Eruda Launched')">
+    Open DevTools
+</button>
+
         </div>
         <div id="admin">
           <h3>Admin</h3>
