🌝💶 Checkpoint ./public/index.html:51974198/2

--- a/public/index.html
+++ b/public/index.html
@@ -485,10 +485,9 @@
         eruda.init(); 
     } 
 })(); 
-alert('Eruda Launched')">
+alert('Eruda Launched');">
     Open DevTools
 </button>
-
         </div>
         <div id="admin">
           <h3>Admin</h3>
