🚧🏥 Checkpoint ./public/errors/414.html:51974198/25

--- a/public/errors/414.html
+++ b/public/errors/414.html
@@ -6,7 +6,7 @@
     <h1>414 Request-URI Too Long</h1>
     <hr>
     <p>glitch<br>
-    Your IP has been sent to Dimka<br></p>
+    <!-- Your IP has been sent to Dimka <br>--></p>
     <img src="//http.cat/414.jpg">
   </center></body>
 </html>
