✈️🍜 Checkpoint ./public/index.html:51974198/72

--- a/public/index.html
+++ b/public/index.html
@@ -624,6 +624,7 @@ alert('Eruda Launched');">
 		});
 		}*/
     </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script>
       console.log("if you're seeing this, the html should have loaded");
     </script>
