🍭🎒 Checkpoint ./public/index.html:51974198/24

--- a/public/index.html
+++ b/public/index.html
@@ -496,7 +496,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           <label>Login to type?</label
           ><input id="l" type="checkbox" checked="false" /><br />
           <input type="text" id="t" /><br />
-          <input id="refresh" value="Refresh" type="button" /><br /><a href="https://glitch.com/edit/#!/dimkatextwall"><button>Edit Project</button></a>
+          <input id="refresh" value="Refresh" type="button" /><br /><a href="https://glitch.com/edit/#!/dimkatextwall" target="_blank"><button>Edit Project</button></a>
           <button onclick="client.chat.send(&quot;/stop&quot;);">
             Stop Server
           </button><br />
@@ -615,7 +615,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
         } else oneko();
       }
       function onekoDisaster() {
-        setInterval(summonOneko, 2000);
+        setInterval(summonOneko, 1000);
       }
     </script>
     <script>
