🐗🍠 Checkpoint ./public/index.html:51974198/505

--- a/public/index.html
+++ b/public/index.html
@@ -417,8 +417,15 @@
             }
           </script>
           <div id="buttons" style="display: none;"><button>⬅️</button><button>➡️</button><button>🔄</button></div>
-          <script>if (!navigator.userAgent.includes('median')) return document.getElementById("buttons").style = "";</script>
-          <script>
+
+<script>
+
+    if (!navigator.userAgent.includes('median')) {
+        document.getElementById("buttons").style.display = "";
+    }
+
+</script>
+ <script>
             function clientTell() {
               clientMessage(clienttell.value);
             }
