🐆🎤 Checkpoint ./public/.well-known/change-password/index.html:51974198/308

--- a/public/.well-known/change-password/index.html
+++ b/public/.well-known/change-password/index.html
@@ -1,2 +1,2 @@
-Please Wait...
-<script>location.href = "/#:~:text=Change%20password"</script>
+<h1 style="text-align: center;">Please Wait...</h1>
+<script>location.href = "/#:~:text=Account%20settings"</script>
