⛳️🐢 Checkpoint ./public/.well-known/change-password/index.html:51974198/15

--- a/public/.well-known/change-password/index.html
+++ b/public/.well-known/change-password/index.html
@@ -1,2 +1,2 @@
 <h1 style="text-align: center;">Please Wait...</h1>
-<script>location.href = "/#:~:text=Account%20settings"</script>
+<script>location.href = "/change-password#:~:text=Account%20settings"</script>
