⛲️🚔 Checkpoint ./public/index.html:51974198/549

--- a/public/index.html
+++ b/public/index.html
@@ -555,8 +555,8 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
     </div>
     <div id="connecting">
       <div class="connectingtext">
-        <h1 id="connecting1"></h1>
-        <h2 id="connecting2"></h2>
+        <h1 id="connecting1"><noscript>No JavaScript</noscript></h1>
+        <h2 id="connecting2"><nocscript>Seems like you don't have JavaScript on, This site will <strong>NOT</strong> work without JavaScript.<br />Please, enable JavaScript or I'm gonna steal your bones.<br />Here's a guide on <a href="https://www.whatismybrowser.com/guides/how-to-enable-javascript/" target="_blank" style="color: cyan;">How to enable JavaScript</a>.</nocscript></h2>
       </div>
     </div>
     <canvas touch-action="none" id="canvas"></canvas>
