--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,16 @@
           </div>
         </form>
       </div>
+            <div id="shortcuts">
+        <div id="closeshortcut">
+          <img alt="cancel" src="/static/cancel.svg" />
+        </div>
+        <span class="tptitle">Shortcuts</span>
+              <table>
+                <tr><th>Name</th><th>Shortcut</th></tr>
+                <tr><td></td></tr>
+              </table>
+      </div>
     </div>
     <div id="chat" class="hidden">
       <div class="buttoncontainer">
