👐👁 Checkpoint ./public/index.html:51974198/905

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,18 @@
         <span class="tptitle">Shortcuts</span>
               <table>
                 <tr><th>Name</th><th>Shortcut</th></tr>
-                <tr><td></td></tr>
+                <tr><td>Copy text</td><td>ALT+C</td></tr>
+                <tr><td>Change color from a character</td><td>ALT+Click</td></tr>
+                <tr><td>Change color from the list</td><td>ALT+Scroll</td></tr>
+                <tr><td>Copy a character</td><td>CTRL+C</td></tr>
+                <tr><td>Undo</td><td>CTRL+Z</td></tr>
+                <tr><td>Redo</td><td>CTRL+Y</td></tr>
+                <tr><td>Teleport</td><td>CTRL+G</td></tr>
+                <tr><td><b>Bold</b> text</td><td>CTRL+B</td></tr>
+                <tr><td><i>Italtic</i> text</td><td>CTRL+I</td></tr>
+                <tr><td><u>Underline</u> text</td><td>CTRL+U</td></tr>
+                <tr><td><s>Strikethrough</s> text</td><td>CTRL+S</td></tr>
+                <tr><td>Decoration menu</td><td>Right click/Long tap</td></tr>
               </table>
       </div>
     </div>
