🔨📉 Checkpoint ./public/static/scriptloader.js:51974198/34 ./public/index.html:51974198/358

--- a/public/index.html
+++ b/public/index.html
@@ -654,16 +654,19 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           <img id="pasteico" alt="paste" src="/static/paste.svg" />
         </div>
         <div id="openmenu" title="Colors" class="infobtn">
-          <img alt="color" src="/static/palette.svg" />
+          <img alt="🎨" src="/static/palette.svg" />
         </div>
         <div id="options" title="Options" class="infobtn">
-          <img alt="options" src="/static/settings.svg" />
+          <img alt="⚙" src="/static/settings.svg" />
         </div>
         <div id="theme" title="Theme" class="infobtn">
           <img id="themeico" alt="theme" src="/static/sun.svg" />
         </div>
         <div id="goto" title="Teleport" class="infobtn">
-          <img alt="arrow" src="/static/go.svg" />
+          <img alt="↗" src="/static/go.svg" />
+        </div>
+        <div id="owner" title="This user is the owner of Dimka's TextWall." class="infobtn">
+          <img alt="👑">
         </div>
         <!--
         <div title="Discord" class="infobtn">
