--- a/public/index.html
+++ b/public/index.html
@@ -660,13 +660,13 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           <img alt="⚙" src="/static/settings.svg" />
         </div>
         <div id="theme" title="Theme" class="infobtn">
-          <img id="themeico" alt="theme" src="/static/sun.svg" />
+          <img id="themeico" alt="☀" src="/static/sun.svg" />
         </div>
         <div id="goto" title="Teleport" class="infobtn">
           <img alt="↗" src="/static/go.svg" />
         </div>
-        <div id="owner" title="This user is the owner of Dimka's TextWall." class="infobtn">
-          <img alt="👑">
+        <div id="owner" title="This user is the owner of Dimka's TextWall." class="infobtn" style="display: none;">
+          <img alt="👑" src="/static/crown.svg">
         </div>
         <!--
         <div title="Discord" class="infobtn">
