✊🌝 Checkpoint ./public/index.html:51974198/6 ./public/static/scriptloader.js:51974198/412

--- a/public/index.html
+++ b/public/index.html
@@ -666,7 +666,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           <img alt="↗" src="/static/go.svg" />
         </div>
         <div id="owner" title="This user is the owner of Dimka's TextWall." class="infobtn" style="display: none;">
-          <img alt="👑" src="/static/crown.svg">
+          <img alt="👑" src="/static/crown.png">
         </div>
         <!--
         <div title="Discord" class="infobtn">
