🚐💾 Checkpoint ./public/static/textwall.js:51974198/580 ./public/index.html:51974198/15

--- a/public/index.html
+++ b/public/index.html
@@ -623,7 +623,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
       <div class="connectingtext">
         <h1 id="connecting1"><noscript>No JavaScript</noscript></h1>
         <h2 id="connecting2">
-          <nocscript
+          <noscript
             >Seems like you don't have JavaScript on, This site will
             <strong>NOT</strong> work without JavaScript.<br />Please, enable
             JavaScript or I'm gonna steal your bones.<br />Here's a guide on
@@ -632,7 +632,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
               target="_blank"
               style="color: cyan"
               >How to enable JavaScript</a
-            >.</nocscript
+            >.</noscript
           >
         </h2>
       </div>
@@ -648,10 +648,10 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           <img alt="home" src="/static/home.svg" />
         </div>
         <div id="copy" title="Copy Selection" class="infobtn">
-          <img id="copyico" alt="copy" src="/static/copy.svg" />
+          <img id="copyico" alt="📋" src="/static/copy.svg" />
         </div>
         <div id="paste" title="Paste" class="infobtn">
-          <img id="pasteico" alt="paste" src="/static/paste.svg" />
+          <img id="pasteico" alt="📋" src="/static/paste.svg" />
         </div>
         <div id="openmenu" title="Colors" class="infobtn">
           <img alt="🎨" src="/static/palette.svg" />
