💗🎄 Checkpoint ./public/index.html:51974198/48 ./server.js:51974198/26

--- a/public/index.html
+++ b/public/index.html
@@ -645,13 +645,13 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
       </div>
       <div class="buttons">
         <div id="home" title="Home" class="infobtn">
-          <img alt="home" src="/static/home.svg" />
+          <img alt="🏠" src="/static/home.svg" />
         </div>
         <div id="copy" title="Copy Selection" class="infobtn">
           <img id="copyico" alt="📋" src="/static/copy.svg" />
         </div>
         <div id="paste" title="Paste" class="infobtn">
-          <img id="pasteico" alt="📋" src="/static/paste.svg" />
+          <img id="pasteico" alt="" src="/static/paste.svg" />
         </div>
         <div id="openmenu" title="Colors" class="infobtn">
           <img alt="🎨" src="/static/palette.svg" />
