🐡🍣 Checkpoint ./public/index.html:51974198/2 ./public/static/textwall.js:51974198/207

--- a/public/index.html
+++ b/public/index.html
@@ -651,7 +651,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           <img id="copyico" alt="📋" src="/static/copy.svg" />
         </div>
         <div id="paste" title="Paste" class="infobtn">
-          <img id="pasteico" alt="" src="/static/paste.svg" />
+          <img id="pasteico" alt="📤" src="/static/paste.svg" />
         </div>
         <div id="openmenu" title="Colors" class="infobtn">
           <img alt="🎨" src="/static/palette.svg" />
