🏭🐒 Checkpoint ./public/index.html:51974198/590

--- a/public/index.html
+++ b/public/index.html
@@ -436,8 +436,9 @@
           <button onclick="summonOneko();">Summon an Oneko cat</button><br />
           <button onclick="onekoDisaster();">ONEKO DISASTER!</button><br />
           <button onclick="superOnekoDisaster();">SUPER ONEKO DISASTER</button><br />
+          <button onclick="ultraOnekoDisaster();">ULTRA ONEKO DISASTER!!!</button>
           <button onclick="removeOneko();">Remove a Oneko cat</button><br />
-          <button>Cancel Oneko Disasters</button><br /><br />
+          <button onclick="removeDisasters();">Cancel Oneko Disasters</button><br /><br />
           <button
             onclick="joinDiscord();"
             style="background-color: #5865f2; color: #ffffff"
@@ -727,14 +728,21 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           window.oneko = () => catsToSpawn++;
         } else oneko();
       }
+      var onekoDisInterval, superOnekoDisInterval, ultraOnekoDisInterval;
       function onekoDisaster() {
-        var onekoDis = setInterval(summonOneko, 1000);
+        onekoDis = setInterval(summonOneko, 1000);
       }
       function superOnekoDisaster() {
-        var superOnekoDis = setInterval(onekoDisaster, 4000);
+        superOnekoDis = setInterval(onekoDisaster, 4000);
+      }
+      function ultraOnekoDisaster() {
+        ultraOnekoDis = setInterval(superOnekoDisaster, 1000);
       }
       function removeOneko() {
         document.getElementById("oneko").remove();
+      }
+      function removeDisasters() {
+        clearInterval(onekoDis);clearInterval(superOnekoDis);clearInterval(ultraOnekoDis);
       }
     </script>
     <script>
