📍👍 Checkpoint ./public/index.html:51974198/86 ./public/static/textwall.js:51974198/26 ./public/mail.html:51974198/49

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
     <meta name="google" content="notranslate" />
-    <meta name="application-name" content="Dimka's TextWall" />
-    <title>Dimka's TextWall</title>
+    <meta name="application-name" content="Falling1's TextWall" />
+    <title>Falling1's TextWall</title>
     <link
       rel="icon"
       sizes="80x80"
@@ -36,14 +36,14 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="description" content="Multiplayer text editor, but better." />
     <meta id="theme-colour" name="theme-color" content="#222222" />
-    <meta property="og:title" content="Dimka's TextWall" />
+    <meta property="og:title" content="Falling1's TextWall" />
     <meta property="og:type" content="website" />
     <meta name="keywords" content="Dimka, TextWall" />
     <meta
       property="og:description"
       content="Multiplayer text editor, but better."
     />
-    <meta property="og:url" content="https://textwall.cc/" />
+    <meta property="og:url" content="https://dimkatextwall.glitch.me/" />
     <meta
       property="og:image"
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/uycrpj.gif?v=1705309497280"
@@ -670,7 +670,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
         <div id="goto" title="Teleport" class="infobtn">
           <img alt="↗" src="/static/go.svg" />
         </div>
-        <div id="owner" title="This user is the owner of Dimka's TextWall." class="infobtn" style="display: none;">
+        <div id="owner" title="This user is the owner of Falling1's TextWall." class="infobtn" style="display: none;">
           <img alt="👑" src="/static/crown.png">
         </div>
         <!--
