--- a/public/mail.html
+++ b/public/mail.html
@@ -24,8 +24,8 @@
     </form>
     <p>
       if urgent or important, you can include
-      <input value="<@836988339491962881>" readonly id="addping" /> in the mail
-      to notify Dimka.
+      <input value="<@579920069686067210>" readonly id="addping" /> in the mail
+      to notify Falling1.
     </p>
     <script>
       sendmail.onsubmit = (e) => {
