--- a/public/download.html
+++ b/public/download.html
@@ -11,11 +11,11 @@
       <h2>Desktop</h2>
       <p>
         (You need Chrome or an Chromium browser.)<br />
-        Click the small desktop (with an download icon) icon and click
+        Click the small desktop (with an down arrow) icon and click
         Install.<br />
       </p>      
       <img
-          src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/0201dae5-9014-4635-b8ad-ad9905c83b23.image.png"
+          src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/b7138739-984a-453c-b196-8adafe81c568.image.png"
         />
       <h2>
         Android
